2003-01-08  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* doc/descriptions/snapscan.desc:
	  Added entries for Acer/Benq 310U, 320U, 340U and 
	  Mitsubishi Diamondview 650U
	* backend/snapscan.c backend/snapscan.h backend/snapscan-scsi.c
	  backend/snapscan.conf: Backend version 1.4.18, added support for 
	  Acer/Benq310U, fixed color correction for Agfa SnapScan 300 

2003-01-08  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/hpsj5s.desc doc/descriptions-external/hp4200.desc:
	  Use uniform model names for HP scanners.
	* doc/descriptions/unsupported.desc: Added Canon CanoScan D1250U2 
	  and HP ScanJet 4400C.
	* po/artec_eplus48u.de.po po/epson.de.po po/epson.ru.po
	  po/epson.sv.po po/gt68xx.de.po po/matsushita.fr.po
	  po/matsushita.ru.po po/mustek.de.po po/mustek.ru.po
	  po/mustek_usb.de.po po/mustek_usb.ru.po po/plustek.de.po
	  po/plustek.es.po po/plustek.ru.po po/pnm.de.po po/pnm.ru.po
	  po/sceptre.fr.po po/sceptre.ru.po po/snapscan.de.po
	  po/snapscan.ru.po po/teco1.fr.po po/teco1.ru.po po/umax.de.po
	  po/umax.fr.po po/umax_pp.de.po po/umax_pp.fr.po po/umax_pp.ru.po
	  po/umax.ru.po: Remove per-backend translations. The translations
	  are now in the per-language sane-backends.??.po files.
	* po/saneopts.de.po po/saneopts.es.po po/saneopts.fr.po po/saneopts.ru.po
	  po/saneopts.sv.po: Remove global saneopts translations. The translations
	  are now in the per-language sane-backends.??.po files.
	* TODO: Updated .desc file, mapages, sanei_usb and OS/2 entries. Removed
	  entry about po files.
	* po/Makefile.in: Remove sane-backends.pot from list of distributed 
	  files. Add microtek2 files.
	* backend/microtek2.c backend/microtek2.h:  Improved support for
	  Scanmaker X12USL. Alpha support for Scanmaker 9800XL. Some bugfixes.
	  (From Karsten Festag <karsten.festag@gmx.de>).
	* po/sane-backends.de.po: Added translation for microtek2 backend.
	  (From Karsten Festag <karsten.festag@gmx.de>).
