@@ -70,3 +70,7 @@ usb 0x043d 0x002d
 ##############################################################################
 # Autodetect Plustek OpticPro 1248U
 usb 0x07b3 0x0401
+
+##############################################################################
+# Autodetect Genius Colorpage Vivid3x
+usb 0x0458 0x2011
